[tool.poetry]
name = "adventofcode_2022"
version = "0.1.0"
description = ""
authors = ["Kevin Sapper <kevinsapper88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
prettyprint = "^0.1.5"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
